Major Bug Fixes & Polishes
- UI on large resolution screens doesn't break on windows
- Headers display properly when rotated (finally fixed this 4 month old bug)
- All icons fleshed out
- Changed board icon to provide a better preview

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .container {  
+  height: 100%;
   display: grid;
   grid-template-columns: 0.4fr 2fr 0.4fr;
-  grid-template-rows: 2.5vh 95vh 2.5vh;
+  grid-template-rows: 24px auto 24px;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
